--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -1,11 +1,17 @@
 <!-- src/app/user-registration-form/user-registration-form.component.html -->
 <mat-card>
   
-  <mat-card-header>
-    <mat-card-title>Login!</mat-card-title>
-  </mat-card-header>
-  
   <mat-card-content>
+
+    <button
+      mat-raised-button
+      (click)="cancelLogin()"
+      class="float-right"
+      >
+      x
+    </button>
+
+    <br/>
     
     <form>
       <mat-form-field>
@@ -17,7 +23,7 @@
           name="username"
           required
           >
-      </mat-form-field>
+      </mat-form-field><br/>
       <mat-form-field>
         <input
           matInput
@@ -37,9 +43,11 @@
     <button
       mat-raised-button
       (click)="loginUser()"
-      color="primary"
       >
-      Login
+      <h5>Log me in!</h5>
+      <mat-icon class="icon-display">
+	navigate_next
+      </mat-icon>
     </button>
   </mat-card-actions>
   
